--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,12 @@
     <title>Vanilla Redux</title>
   </head>
   <body>
-    <button id="add">Add</button>
-    <span></span>
-    <button id="minus">Minus</button>
+    <h1>To Dos</h1>
+    <form>
+      <input type="text" placeholder="Write to do" />
+      <button>Add</button>
+    </form>
+    <ul></ul>
     <script src="../src/index.js"></script>
   </body>
 </html>
