setting React Redux

--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,13 @@
     <title>Vanilla Redux</title>
   </head>
   <body>
-    <h1>To Dos</h1>
+    <div id="root"></div>
+    <!-- <h1>To Dos</h1>
     <form>
       <input type="text" placeholder="Write to do" />
       <button>Add</button>
     </form>
     <ul></ul>
-    <script src="../src/index.js"></script>
+    <script src="../src/index.js"></script> -->
   </body>
 </html>
